LPS-114826 Avoid overlaping reoder buttons by the page title

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/css/_portlet-forms.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/css/_portlet-forms.scss
@@ -60,6 +60,7 @@
 	.lfr-ddm-form-page-title {
 		font-weight: normal;
 		resize: none;
+		width: 90%;
 		word-break: normal;
 	}
 
